Fixed buttons wrapping on smaller screen sizes.

--- a/Trabalho3/index.css
+++ b/Trabalho3/index.css
@@ -22,6 +22,7 @@
   margin: 5px;
   padding: 5px;
   line-height: 5px;
+  white-space: nowrap;
 }
 
 .ticks {
